[workspace]
members = [
    "rust/library",
    "rust/test_executor",
	"myProblems/myProblems_2766",
	"myProblems/myProblems_2844",
]

[package]
name = "leetcode"
version = "0.1.0"
edition = "2021"
rust-version = "1.79.0"
authors = ["benhao"]
description = "LeetCode solutions in Rust"
readme = "README.md"

[[test]]
name = "solution_test"
path = "rust/test_executor/tests/test.rs"

[[test]]
name = "solutions_test"
path = "rust/test_executor/tests/solutions_test.rs"

[dependencies]
serde_json = "1.0"
rand = "0.8.4"
regex = "1.10.5"
test_executor = { path = "rust/test_executor", features = ["run_test"] }
solution_2766 = { path = "myProblems/myProblems_2766", features = ["solution_2766"] }
solution_2844 = { path = "myProblems/myProblems_2844", features = ["solution_2844"] }

