[package]
name = "test_executor"
version = "0.1.0"
edition = "2021"
rust-version = "1.79.0"
authors = ["benhao"]
description = "LeetCode Rust Test Main"
readme = "../README.md"

[features]
run_test = []
default = []

[dependencies]
serde_json = "1.0"
solution_2766 = { path = "../../myProblems/myProblems_2766", features = ["solution_2766"] }
